# empty_project

./: CMakeLists.txt  MyProject.pro  MyQtProject.pro  README
doc/: doc.tag
include/: my_header.h
src/: my_source.cpp
test/: CMakeLists.txt
unitTesting/: CMakeLists.txt
